// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CatalogSortBySelect rendering tests DATE_ASC sort - test 1`] = `
<div>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_d_"
    aria-expanded="false"
    class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-9 w-full sm:h-8 sm:w-42.5"
    data-size="default"
    data-slot="select-trigger"
    data-state="closed"
    data-testid="catalog-sort-by-select"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      class="flex items-center gap-1.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock-arrow-down h-4 w-4 shrink-0"
        data-testid="sort-mobile-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l2 1"
        />
        <path
          d="M12.337 21.994a10 10 0 1 1 9.588-8.767"
        />
        <path
          d="m14 18 4 4 4-4"
        />
        <path
          d="M18 14v8"
        />
      </svg>
      <span
        class="sm:hidden"
      >
        Älteste
      </span>
      <span
        class="hidden sm:contents"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        >
          <span
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock-arrow-down h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l2 1"
              />
              <path
                d="M12.337 21.994a10 10 0 1 1 9.588-8.767"
              />
              <path
                d="m14 18 4 4 4-4"
              />
              <path
                d="M18 14v8"
              />
            </svg>
            Älteste zuerst
          </span>
        </span>
      </span>
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down size-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
  <div
    data-testid="mock-react-portal"
  />
</div>
`;

exports[`CatalogSortBySelect rendering tests DATE_DESC sort - test 1`] = `
<div>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_j_"
    aria-expanded="false"
    class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-9 w-full sm:h-8 sm:w-42.5"
    data-size="default"
    data-slot="select-trigger"
    data-state="closed"
    data-testid="catalog-sort-by-select"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      class="flex items-center gap-1.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock h-4 w-4 shrink-0"
        data-testid="sort-mobile-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span
        class="sm:hidden"
      >
        Neueste
      </span>
      <span
        class="hidden sm:contents"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        >
          <span
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            Neueste zuerst
          </span>
        </span>
      </span>
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down size-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
  <div
    data-testid="mock-react-portal"
  />
</div>
`;

exports[`CatalogSortBySelect rendering tests TITLE_DESC sort - test 1`] = `
<div>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_7_"
    aria-expanded="false"
    class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-9 w-full sm:h-8 sm:w-42.5"
    data-size="default"
    data-slot="select-trigger"
    data-state="closed"
    data-testid="catalog-sort-by-select"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      class="flex items-center gap-1.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-up-az lucide-arrow-up-a-z h-4 w-4 shrink-0"
        data-testid="sort-mobile-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m3 8 4-4 4 4"
        />
        <path
          d="M7 4v16"
        />
        <path
          d="M20 8h-5"
        />
        <path
          d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
        />
        <path
          d="M15 14h5l-5 6h5"
        />
      </svg>
      <span
        class="sm:hidden"
      >
        Z–A
      </span>
      <span
        class="hidden sm:contents"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        >
          <span
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-up-az lucide-arrow-up-a-z h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m3 8 4-4 4 4"
              />
              <path
                d="M7 4v16"
              />
              <path
                d="M20 8h-5"
              />
              <path
                d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
              />
              <path
                d="M15 14h5l-5 6h5"
              />
            </svg>
            Titel Z–A
          </span>
        </span>
      </span>
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down size-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
  <div
    data-testid="mock-react-portal"
  />
</div>
`;

exports[`CatalogSortBySelect rendering tests default (TITLE_ASC) sort - test 1`] = `
<div>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_1_"
    aria-expanded="false"
    class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-9 w-full sm:h-8 sm:w-42.5"
    data-size="default"
    data-slot="select-trigger"
    data-state="closed"
    data-testid="catalog-sort-by-select"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      class="flex items-center gap-1.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-down-az lucide-arrow-down-a-z h-4 w-4 shrink-0"
        data-testid="sort-mobile-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m3 16 4 4 4-4"
        />
        <path
          d="M7 20V4"
        />
        <path
          d="M20 8h-5"
        />
        <path
          d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
        />
        <path
          d="M15 14h5l-5 6h5"
        />
      </svg>
      <span
        class="sm:hidden"
      >
        A–Z
      </span>
      <span
        class="hidden sm:contents"
      >
        <span
          data-slot="select-value"
          style="pointer-events: none;"
        >
          <span
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-down-az lucide-arrow-down-a-z h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m3 16 4 4 4-4"
              />
              <path
                d="M7 20V4"
              />
              <path
                d="M20 8h-5"
              />
              <path
                d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
              />
              <path
                d="M15 14h5l-5 6h5"
              />
            </svg>
            Titel A–Z
          </span>
        </span>
      </span>
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down size-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
  <div
    data-testid="mock-react-portal"
  />
</div>
`;
